[package]
name = "russo"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "SSO library for common servers written in Rust."

[dependencies]
reqwest = { version = "0.11.5", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
futures = "0.3.17"
